# bpm-sniffer

./: .gitignore  AGENTS.md  LICENSE  README.md  backlog.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  website-deploy.yml  website.yml
doc/: README.md  app-capture-milestone.md  architecture.md  bpm-algorithm.md  structure.md  tauri-ipc-ui.md  windows-capture.md  算法原理与流程.md  调性估计算法草案.md
logo/: 16.html  20.html  24.html  256.html  32.html  40.html  48.html  snap-all.cjs  snap.cjs
readme/: README_CN.md
scripts/: generate_tonal_house_sample.py  prepare-updater-endpoints.cjs
src/: App.tsx  i18n.ts  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: app.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  bpm.rs  capture.rs  commands.rs  float_ui.rs  key.rs  lang.rs  logging.rs  macos_sck_audio.m  main.rs  sck_audio.rs  state.rs
src-tauri/src/tempo/: mod.rs
src/component/: AboutWindow.tsx  BarsViz.tsx  CopyItem.tsx  FloatBall.tsx  LogsWindow.tsx  VizPanel.tsx  WaterfallViz.tsx  WaveViz.tsx
website/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
website/scripts/: fetch-release.mjs
website/src/: App.vue  main.ts  router.ts  style.css
website/src/components/: BpmDemo.vue
website/src/components/bpm/: BarsViz.vue  VizPanel.vue  WaterfallViz.vue  WaveViz.vue
website/src/views/: HomeView.vue
