[package]
name = "bpm-sniffer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
# 生成上下文（tauri.conf.json）
tauri-build = { version = "2", features = [] }
# 生成占位 ICO 图标（避免缺失导致构建失败）
ico = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "ico"] }

[dependencies]
# Tauri v2 核心（启用托盘与菜单、ICO 解码）
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 并发与错误处理
crossbeam-channel = "0.5"
thiserror = "1"
anyhow = "1"
# 频域分析（调性/Chroma 实验）
rustfft = "6"
# 环境变量加载（本地覆盖更新端点）
dotenvy = "0.15"
winreg = { version = "0.52", optional = true }
# Windows WASAPI / COM
# Windows 平台专用依赖
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming"
] }
winreg = { version = "0.52" }
# 单实例插件
tauri-plugin-single-instance = "2"

[features]
default = []


